map no longer covering other buttons

--- a/frontend/src/components/AddListingForm/AddListingForm.css
+++ b/frontend/src/components/AddListingForm/AddListingForm.css
@@ -14,7 +14,7 @@
     font-size: 24px;
     margin-bottom: 20px;
     padding: 10px;
-    
+    z-index: 11;
   }
   .popup-form {
     position: fixed;
