--- a/frontend/src/components/Map/Map.css
+++ b/frontend/src/components/Map/Map.css
@@ -1,11 +1,13 @@
 #map-container {
     margin-top: 100px;
-    height: 100%;
-    width: 100%;
+    height: 90vh;
+    width: 100vw;
+    margin-top: 50px;
+    z-index: 1;
   }
   
   .leaflet-container {
-    height: 1250px;
+    height: 1050px;
     width: 100%;
     z-index: 1;
   }
