--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 1rem;
+    z-index: 5;
   }
   
   .navbar-link {
